# call-center

./: .gitignore  README.md  main.py  pyproject.toml
chat/: ManualAgent.py  kani_example.py  langchain_example.py  mlx_engine.py  tools_test.py
mcpserver/: server.py
model/: kani_example.py  load.py  mlx_engine.py
sound/: play.py
transcript/: livewhisper.py  transcribe_audio.py  transcribe_audio_mlx.py  transcript_medium.txt  transcript_small.txt  transcript_turbo.txt
