[project]
name = "call-center"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "ipywidgets>=8.1.7",
    "kani[all]>=1.6.1",
    "mlx-lm>=0.28.2",
    "numpy>=2.3.3",
    "openai-whisper>=20250625",
    "scipy>=1.16.2",
    "sounddevice>=0.5.2",
    "torch>=2.8.0",
]
